--- a/BuildAReact/7_function_components.html
+++ b/BuildAReact/7_function_components.html
@@ -30,37 +30,46 @@
                 props: {
                     ...props,
                     children: children.map(child =>
-                        typeof child === 'object'
-                            ? child
-                            : createTextElement(child)
+                        typeof child === 'object' ? child : createTextElement(child)
                     )
                 }
-            }
+            };
         }
+
         function createTextElement(text) {
             return {
-                type: "TEXT_ELEMENT",
+                type: "PRIMITIVE_ELEMENT",
                 props: {
                     nodeValue: text,
                     children: []
                 }
-            }
+            };
         }
 
+        // render function
         function createDom(fiber) {
-            const dom = fiber.type === 'TEXT_ELEMENT'
+            const dom = fiber.type === 'PRIMITIVE_ELEMENT'
                 ? document.createTextNode("")
-                : document.createElement(fiber.type)
-            updateDom(dom, {}, fiber.props)
-            return dom
+                : document.createElement(fiber.type);
+
+            const isProperty = key => key !== "children";
+            Object.keys(fiber.props)
+                .filter(isProperty)
+                .forEach(name => {
+                    dom[name] = fiber.props[name]
+                });
+            return dom;
         }
 
-        const isEvent = key => key.startsWith("on")
-        const isProperty = key => key !== "children" && !isEvent(key)
-        const isNew = (prev, next) => key => prev[key] !== next[key]
-        const isGone = (prev, next) => key => !(key in next)
+        const isEvent = key => key.startsWith("on");
+        const isProperty = key => key !== "children" && !isEvent(key);
+        // 是否是新属性
+        const isNew = (prev, next) => key => prev[key] !== next[key];
+        // 是否是旧属性
+        const isGone = (prev, next) => key => !(key in next);
+        
         function updateDom(dom, prevProps, nextProps) {
-            //Remove old or changed event listeners
+            // 移除旧的或者已经改变的事件监听器
             Object.keys(prevProps)
                 .filter(isEvent)
                 .filter(
@@ -76,25 +85,25 @@
                         eventType,
                         prevProps[name]
                     )
-                })
+                });
 
-            // Remove old properties
+            // 移除旧属性
             Object.keys(prevProps)
                 .filter(isProperty)
                 .filter(isGone(prevProps, nextProps))
                 .forEach(name => {
                     dom[name] = ""
-                })
+                });
 
-            // Set new or changed properties
+            // 设置新的或改变后的属性
             Object.keys(nextProps)
                 .filter(isProperty)
                 .filter(isNew(prevProps, nextProps))
                 .forEach(name => {
                     dom[name] = nextProps[name]
-                })
+                });
 
-            // Add event listeners
+            // 添加事件监听器
             Object.keys(nextProps)
                 .filter(isEvent)
                 .filter(isNew(prevProps, nextProps))
@@ -106,51 +115,52 @@
                         eventType,
                         nextProps[name]
                     )
-                })
+                });
         }
 
         function commitRoot() {
-            deletions.forEach(commitWork)
-            commitWork(wipRoot.child)
-            currentRoot = wipRoot
-            wipRoot = null
+            // 渲染DOM时，遍历deletions删除旧fiber
+            deletions.forEach(commitWork);
+            commitWork(wipRoot.child);
+            // 交换两棵树的指针
+            currentRoot = wipRoot;
+            wipRoot = null;
         }
 
         function commitWork(fiber) {
-            if (!fiber) return
+            if (!fiber) return;
             // 修改 domParent 的获取逻辑，通过 while 循环不断向上寻找，直到找到有 dom 节点的父 fiber
-            let domParentFiber = fiber.parent
+            let domParentFiber = fiber.parent;
             // 如果 fiber.parent 没有 dom 节点，则继续找 fiber.parent.parent.dom，直到有 dom 节点
             while (!domParentFiber.dom) {
-                domParentFiber = domParentFiber.parent
+                domParentFiber = domParentFiber.parent;
             }
-            const domParent = domParentFiber.dom
+            const domParent = domParentFiber.dom;
 
 
-            if (
-                fiber.effectTag === "PLACEMENT" &&
-                fiber.dom != null
-            ) {
-                domParent.appendChild(fiber.dom)
+            if (fiber.effectTag === "PLACEMENT" && fiber.dom != null) {
+                // 当fiber的effectTag为PLACEMENT时，表示新增fiber，将该节点新增至父节点中
+                domParent.appendChild(fiber.dom);
             } else if (fiber.effectTag === "DELETION") {
                 // 如果 fiber 的更新类型是删除，执行 commitDeletion
-                commitDeletion(fiber.dom, domParent)
+                commitDeletion(fiber.dom, domParent);
             } else if (fiber.effectTag === 'UPDATE' && fiber.dom !== null) {
-                updateDom(fiber.dom, fiber.alternate.props, fiber.props)
+                // 当 fiber 的 effectTag 为 UPDATE 时，表示是更新 fiber，更新 props 属性
+                updateDom(fiber.dom, fiber.alternate.props, fiber.props);
             }
 
-            commitWork(fiber.child)
-            commitWork(fiber.sibling)
+            commitWork(fiber.child);
+            commitWork(fiber.sibling);
         }
 
         // 修改删除节点的逻辑，当删除节点时，需要不断向下寻找，直到找到有 dom 节点的子 fiber
         function commitDeletion(fiber, domParent) {
             if (fiber.dom) {
                 // 如果该 fiber 有 dom 节点，直接删除
-                domParent.removeChild(fiber.dom)
+                domParent.removeChild(fiber.dom);
             } else {
                 // 如果该 fiber 没有 dom 节点，则继续找它的子节点进行删除
-                commitDeletion(fiber.child, domParent)
+                commitDeletion(fiber.child, domParent);
             }
         }
 
@@ -160,52 +170,57 @@
                 props: {
                     children: [element]
                 },
+                // 链接到旧fiber的属性，指在前一个commit阶段提交更新到DOM的fiber
                 alternate: currentRoot
-            }
-            deletions = []
-            nextUnitOfWork = wipRoot
+            };
+            // render时，初始化 deletions 数组
+            deletions = [];
+            nextUnitOfWork = wipRoot;
         }
 
-        let nextUnitOfWork = null
-        let wipRoot = null
-        let currentRoot = null
-        let deletions = null
+        let nextUnitOfWork = null;
+        // work in progress root
+        let wipRoot = null;
+        // 用current tree保存“上一次commit到DOM的fiber tree”的引用
+        let currentRoot = null;
+        // 新建deletions数组，存储需删除的fiber节点，渲染DOM时，遍历deletions删除旧fiber
+        let deletions = null;
 
         function workLoop(deadline) {
-            let shouldYield = false
+            let shouldYield = false;
             while (nextUnitOfWork && !shouldYield) {
-                nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
-                shouldYield = deadline.timeRemaining() < 1
+                nextUnitOfWork = performUnitOfWork(nextUnitOfWork);
+                shouldYield = deadline.timeRemaining() < 1;
             }
 
             if (!nextUnitOfWork && wipRoot) {
-                commitRoot()
+                commitRoot();
             }
 
-            requestIdleCallback(workLoop)
+            requestIdleCallback(workLoop);
         }
 
-        requestIdleCallback(workLoop)
+        requestIdleCallback(workLoop);
 
         function performUnitOfWork(fiber) {
             // 是否是函数类型组件
-            const isFunctionComponent = fiber && fiber.type && fiber.type instanceof Function
+            const isFunctionComponent = fiber && fiber.type && fiber.type instanceof Function;
             // 如果是函数组件，执行 updateFunctionComponent 函数
             if (isFunctionComponent) {
-                updateFunctionComponent(fiber)
+                updateFunctionComponent(fiber);
             } else {
                 // 如果不是函数组件，执行 updateHostComponent 函数
-                updateHostComponent(fiber)
+                updateHostComponent(fiber);
             }
             if (fiber.child) {
-                return fiber.child
+                return fiber.child;
             }
-            let nextFiber = fiber
+            let nextFiber = fiber;
             while (nextFiber) {
                 if (nextFiber.sibling) {
-                    return nextFiber.sibling
+                    return nextFiber.sibling;
                 }
-                nextFiber = nextFiber.parent
+                nextFiber = nextFiber.parent;
             }
         }
 
@@ -213,32 +228,36 @@
         // 函数组件需要运行来获得 fiber.children
         function updateFunctionComponent(fiber) {
             // fiber.type 就是函数组件本身，fiber.props 就是函数组件的参数
-            const children = [fiber.type(fiber.props)]
-            reconcileChildren(fiber, children)
+            const children = [fiber.type(fiber.props)];
+            reconcileChildren(fiber, children);
         }
 
         // 定义 updateHostComponent 函数，执行非函数组件
         function updateHostComponent(fiber) {
             if (!fiber.dom) {
-                fiber.dom = createDom(fiber)
+                fiber.dom = createDom(fiber);
             }
-            reconcileChildren(fiber, fiber.props.children)
+            reconcileChildren(fiber, fiber.props.children);
         }
 
         function reconcileChildren(wipFiber, elements) {
-            let index = 0
-            let oldFiber = wipFiber.alternate && wipFiber.alternate.child
-            let prevSibling = null
+            let index = 0;
+            // oldFiber 可以在 wipFiber.alternate 中找到
+            let oldFiber = wipFiber.alternate && wipFiber.alternate.child;
+            // 上一个兄弟节点
+            let prevSibling = null;
 
             while (index < elements.length || oldFiber != null) {
-                const element = elements[index]
-                let newFiber = null
+                const element = elements[index];
+                let newFiber = null;
 
+                // fiber 类型是否相同
                 const sameType =
                     oldFiber &&
                     element &&
-                    element.type == oldFiber.type
+                    element.type == oldFiber.type;
 
+                // 如果类型相同，仅更新 props
                 if (sameType) {
                     newFiber = {
                         type: oldFiber.type,
@@ -247,10 +266,12 @@
                         parent: wipFiber,
                         alternate: oldFiber,
                         effectTag: "UPDATE",
-                    }
+                    };
                 }
 
+                // 新旧 fiber 类型不同，且有新元素时
                 if (element && !sameType) {
+                    // 创建一个新的 dom 节点，设置 effectTag 为 PLACEMENT
                     newFiber = {
                         type: element.type,
                         props: element.props,
@@ -258,46 +279,54 @@
                         parent: wipFiber,
                         alternate: null,
                         effectTag: "PLACEMENT",
-                    }
+                    };
                 }
 
+                // 新旧 fiber 类型不同，且有旧 fiber 时
                 if (oldFiber && !sameType) {
-                    oldFiber.effectTag = "DELETION"
-                    deletions.push(oldFiber)
+                    // 删除旧 fiber，设置 effectTag 为 DELETION
+                    oldFiber.effectTag = "DELETION";
+                    // 加入待删除节点列表
+                    deletions.push(oldFiber);
                 }
 
                 if (oldFiber) {
-                    oldFiber = oldFiber.sibling
+                    oldFiber = oldFiber.sibling;
                 }
 
+                // fiber的第一个子节点
                 if (index === 0) {
-                    wipFiber.child = newFiber
+                    wipFiber.child = newFiber;
                 } else if (element) {
-                    prevSibling.sibling = newFiber
+                    // fiber 的其他子节点，它第一个子节点的兄弟节点
+                    prevSibling.sibling = newFiber;
                 }
 
-                prevSibling = newFiber
-                index++
+                // 把新建的 newFiber 赋值给 prevSibling，在下一个循环为 newFiber 添加兄弟节点
+                prevSibling = newFiber;
+                index++;
             }
         }
 
         const myReact = {
             createElement,
             render
-        }
+        };
 
         /** @jsx myReact.createElement */
-        const container = document.getElementById("container")
+        const container = document.getElementById("container");
 
         function App(props) {
             return (
-                <h1>hi~ {props.name}</h1>
-            )
+                <div>
+                    <h1>hi~ {props.name}</h1>
+                </div>
+            );
         }
 
-        const element = <App name='foo' />
+        const element = <App name='foo' />;
 
-        myReact.render(element, container)
+        myReact.render(element, container);
     </script>
     <p>函数式组件和 html 标签组件相比，有以下两点不同：</p>
     <ul>
