--- a/BuildAReact/8_hooks_useState.html
+++ b/BuildAReact/8_hooks_useState.html
@@ -19,120 +19,118 @@
                 props: {
                     ...props,
                     children: children.map(child =>
-                        typeof child === 'object'
-                            ? child
-                            : createTextElement(child)
+                        typeof child === "object" ? child : createTextElement(child)
                     )
                 }
-            }
+            };
         }
+
         function createTextElement(text) {
             return {
-                type: "TEXT_ELEMENT",
+                type: "PRIMITIVE_ELEMENT",
                 props: {
                     nodeValue: text,
                     children: []
                 }
-            }
+            };
         }
 
         function createDom(fiber) {
-            const dom = fiber.type === 'TEXT_ELEMENT'
+            const dom =
+                fiber.type == "PRIMITIVE_ELEMENT"
                 ? document.createTextNode("")
-                : document.createElement(fiber.type)
-            updateDom(dom, {}, fiber.props)
-            return dom
+                : document.createElement(fiber.type);
+
+            updateDom(dom, {}, fiber.props);
+
+            return dom;
         }
 
         const isEvent = key => key.startsWith("on")
         const isProperty = key => key !== "children" && !isEvent(key)
+        // 是否是新属性
         const isNew = (prev, next) => key => prev[key] !== next[key]
+        // 是否是旧属性
         const isGone = (prev, next) => key => !(key in next)
         function updateDom(dom, prevProps, nextProps) {
             //Remove old or changed event listeners
             Object.keys(prevProps)
                 .filter(isEvent)
-                .filter(
-                    key =>
-                        !(key in nextProps) ||
-                        isNew(prevProps, nextProps)(key)
-                )
+                .filter(key => !(key in nextProps) || isNew(prevProps, nextProps)(key))
                 .forEach(name => {
-                    const eventType = name
-                        .toLowerCase()
-                        .substring(2)
-                    dom.removeEventListener(
-                        eventType,
-                        prevProps[name]
-                    )
-                })
+                const eventType = name.toLowerCase().substring(2);
+                dom.removeEventListener(eventType, prevProps[name]);
+                });
 
             // Remove old properties
             Object.keys(prevProps)
                 .filter(isProperty)
                 .filter(isGone(prevProps, nextProps))
                 .forEach(name => {
-                    dom[name] = ""
-                })
+                dom[name] = "";
+                });
 
             // Set new or changed properties
             Object.keys(nextProps)
                 .filter(isProperty)
                 .filter(isNew(prevProps, nextProps))
                 .forEach(name => {
-                    dom[name] = nextProps[name]
-                })
+                dom[name] = nextProps[name];
+                });
 
             // Add event listeners
             Object.keys(nextProps)
                 .filter(isEvent)
                 .filter(isNew(prevProps, nextProps))
                 .forEach(name => {
-                    const eventType = name
-                        .toLowerCase()
-                        .substring(2)
-                    dom.addEventListener(
-                        eventType,
-                        nextProps[name]
-                    )
-                })
+                const eventType = name.toLowerCase().substring(2);
+                dom.addEventListener(eventType, nextProps[name]);
+                });
         }
 
         function commitRoot() {
-            deletions.forEach(commitWork)
-            commitWork(wipRoot.child)
-            currentRoot = wipRoot
-            wipRoot = null
+            // 渲染DOM时，遍历deletions删除旧fiber
+            deletions.forEach(commitWork);
+            commitWork(wipRoot.child);
+            // 交换两棵树的指针
+            currentRoot = wipRoot;
+            wipRoot = null;
         }
 
         function commitWork(fiber) {
-            if (!fiber) return
-            let domParentFiber = fiber.parent
+            if (!fiber) return;
+            // 修改 domParent 的获取逻辑，通过 while 循环不断向上寻找，直到找到有 dom 节点的父 fiber
+            let domParentFiber = fiber.parent;
+            // 如果 fiber.parent 没有 dom 节点，则继续找 fiber.parent.parent.dom，直到有 dom 节点
             while (!domParentFiber.dom) {
-                domParentFiber = domParentFiber.parent
+                domParentFiber = domParentFiber.parent;
             }
-            const domParent = domParentFiber.dom
+            const domParent = domParentFiber.dom;
 
-            if (
-                fiber.effectTag === "PLACEMENT" &&
-                fiber.dom != null
-            ) {
-                domParent.appendChild(fiber.dom)
+
+            if (fiber.effectTag === "PLACEMENT" && fiber.dom != null) {
+                // 当fiber的effectTag为PLACEMENT时，表示新增fiber，将该节点新增至父节点中
+                domParent.appendChild(fiber.dom);
             } else if (fiber.effectTag === "DELETION") {
-                commitDeletion(fiber.dom, domParent)
+                // 如果 fiber 的更新类型是删除，执行 commitDeletion
+                commitDeletion(fiber.dom, domParent);
             } else if (fiber.effectTag === 'UPDATE' && fiber.dom !== null) {
-                updateDom(fiber.dom, fiber.alternate.props, fiber.props)
+                // 当 fiber 的 effectTag 为 UPDATE 时，表示是更新 fiber，更新 props 属性
+                updateDom(fiber.dom, fiber.alternate.props, fiber.props);
             }
 
-            commitWork(fiber.child)
-            commitWork(fiber.sibling)
+            commitWork(fiber.child);
+            commitWork(fiber.sibling);
         }
 
+        // 修改删除节点的逻辑，当删除节点时，需要不断向下寻找，直到找到有 dom 节点的子 fiber
         function commitDeletion(fiber, domParent) {
             if (fiber.dom) {
-                domParent.removeChild(fiber.dom)
+                // 如果该 fiber 有 dom 节点，直接删除
+                domParent.removeChild(fiber.dom);
             } else {
-                commitDeletion(fiber.child, domParent)
+                // 如果该 fiber 没有 dom 节点，则继续找它的子节点进行删除
+                commitDeletion(fiber.child, domParent);
             }
         }
 
@@ -142,64 +140,81 @@
                 props: {
                     children: [element]
                 },
+                // 链接到旧fiber的属性，指在前一个commit阶段提交更新到DOM的fiber
                 alternate: currentRoot
-            }
-            deletions = []
-            nextUnitOfWork = wipRoot
+            };
+            // render时，初始化 deletions 数组
+            deletions = [];
+            nextUnitOfWork = wipRoot;
         }
 
-        let nextUnitOfWork = null
-        let wipRoot = null
-        let currentRoot = null
-        let deletions = null
+        let nextUnitOfWork = null;
+        // work in progress root
+        let wipRoot = null;
+        // 用current tree保存“上一次commit到DOM的fiber tree”的引用
+        let currentRoot = null;
+        // 新建deletions数组，存储需删除的fiber节点，渲染DOM时，遍历deletions删除旧fiber
+        let deletions = null;
 
         function workLoop(deadline) {
-            let shouldYield = false
+            let shouldYield = false;
             while (nextUnitOfWork && !shouldYield) {
-                nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
-                shouldYield = deadline.timeRemaining() < 1
+                nextUnitOfWork = performUnitOfWork(nextUnitOfWork);
+                shouldYield = deadline.timeRemaining() < 1;
             }
 
             if (!nextUnitOfWork && wipRoot) {
-                commitRoot()
+                commitRoot();
             }
 
-            requestIdleCallback(workLoop)
+            requestIdleCallback(workLoop);
         }
 
-        requestIdleCallback(workLoop)
+        requestIdleCallback(workLoop);
 
         function performUnitOfWork(fiber) {
-            const isFunctionComponent = fiber && fiber.type && fiber.type instanceof Function
+            // 是否是函数类型组件
+            const isFunctionComponent = fiber && fiber.type && fiber.type instanceof Function;
+            // 如果是函数组件，执行 updateFunctionComponent 函数
             if (isFunctionComponent) {
-                updateFunctionComponent(fiber)
+                updateFunctionComponent(fiber);
             } else {
-                updateHostComponent(fiber)
+                // 如果不是函数组件，执行 updateHostComponent 函数
+                updateHostComponent(fiber);
             }
             if (fiber.child) {
-                return fiber.child
+                return fiber.child;
             }
-            let nextFiber = fiber
+            let nextFiber = fiber;
             while (nextFiber) {
                 if (nextFiber.sibling) {
-                    return nextFiber.sibling
+                    return nextFiber.sibling;
                 }
-                nextFiber = nextFiber.parent
+                nextFiber = nextFiber.parent;
             }
         }
 
-        // 新增全局变量 wipFiber, 当前工作单元 fiber
-        let wipFiber = null
-        // 新增全局变量 hookIndex 当前工作单元 fiber 中的hooks数量
-        let hookIndex = null
+        // 新增全局变量 wipFiber, 保存当前工作单元 fiber
+        let wipFiber = null;
+        // 新增全局变量 hookIndex，保存当前工作单元 fiber 中的hooks数量
+        let hookIndex = null;
+
+        // 修改updateFunctionComponent函数，在函数组件更新的时候重置两个变量
         function updateFunctionComponent(fiber) {
-            wipFiber = fiber
+            wipFiber = fiber;
             // 当前工作单元 fiber 的 hook
-            hookIndex = 0
-            wipFiber.hooks = []
-            // wipFiber.hook = null
-            const children = [fiber.type(fiber.props)]
-            reconcileChildren(fiber, children)
+            hookIndex = 0;
+            wipFiber.hooks = [];
+            const children = [fiber.type(fiber.props)];
+            reconcileChildren(fiber, children);
+        }
+
+        // updateHostComponent 函数，执行非函数组件
+        function updateHostComponent(fiber) {
+            if (!fiber.dom) {
+                fiber.dom = createDom(fiber);
+            }
+            reconcileChildren(fiber, fiber.props.children);
         }
 
         function updateRender() {
@@ -207,11 +222,11 @@
                 dom: currentRoot.dom,
                 props: currentRoot.props,
                 alternate: currentRoot
-            }
+            };
             // 设置下一个工作单元
-            nextUnitOfWork = wipRoot
+            nextUnitOfWork = wipRoot;
             // 清空需删除的节点
-            deletions = []
+            deletions = [];
         }
 
         // 新增 useState 函数
@@ -220,56 +235,52 @@
             const oldHook =
                 wipFiber.alternate &&
                 wipFiber.alternate.hooks &&
-                wipFiber.alternate.hooks[hookIndex]
-            console.log(oldHook)
+                wipFiber.alternate.hooks[hookIndex];
             // 初始化钩子，钩子的状态是旧钩子的状态或者初始状态
             const hook = {
                 state: oldHook ? oldHook.state : initial,
                 queue: []
-            }
+            };
 
             // 从旧的钩子队列中获取所有动作，然后将它们应用到新的钩子状态
-            const actions = oldHook ? oldHook.queue : []
+            const actions = oldHook ? oldHook.queue : [];
             actions.forEach(action => {
                 hook.state = action(hook.state)
-            })
+            });
 
-            // 设置钩子状态
+            // 设置钩子状态的setState函数
             let setState = action => {
                 // 将动作添加至钩子队列
-                hook.queue.push(action)
-                // 更新渲染，参考 updateRender 函数
-                updateRender()
-            }
+                hook.queue.push(action);
+                // 更新渲染，新建 updateRender 函数
+                updateRender();
+            };
             // 把钩子添加至工作单元
-            // wipFiber.hook = hook
-            wipFiber.hooks.push(hook)
-            hookIndex++
+            // wipFiber.hook = hook;
+            wipFiber.hooks.push(hook);
+            hookIndex++;
             // 返回钩子的状态和设置钩子的函数
-            return [hook.state, setState]
-        }
-
-        function updateHostComponent(fiber) {
-            if (!fiber.dom) {
-                fiber.dom = createDom(fiber)
-            }
-            reconcileChildren(fiber, fiber.props.children)
+            return [hook.state, setState];
         }
 
         function reconcileChildren(wipFiber, elements) {
             let index = 0
+            // oldFiber 可以在 wipFiber.alternate 中找到
             let oldFiber = wipFiber.alternate && wipFiber.alternate.child
+            // 上一个兄弟节点
             let prevSibling = null
 
             while (index < elements.length || oldFiber != null) {
                 const element = elements[index]
                 let newFiber = null
 
+                // fiber 类型是否相同
                 const sameType =
                     oldFiber &&
                     element &&
                     element.type == oldFiber.type
 
+                // 如果类型相同，仅更新 props
                 if (sameType) {
                     newFiber = {
                         type: oldFiber.type,
@@ -281,7 +292,9 @@
                     }
                 }
 
+                // 新旧 fiber 类型不同，且有新元素时
                 if (element && !sameType) {
+                    // 创建一个新的 dom 节点，设置 effectTag 为 PLACEMENT
                     newFiber = {
                         type: element.type,
                         props: element.props,
@@ -292,21 +305,26 @@
                     }
                 }
 
+                // 新旧 fiber 类型不同，且有旧 fiber 时
                 if (oldFiber && !sameType) {
+                    // 删除旧 fiber，设置 effectTag 为 DELETION
                     oldFiber.effectTag = "DELETION"
-                    deletions.push(oldFiber)
+                    deletions.push(oldFiber) // 加入待删除节点列表
                 }
 
                 if (oldFiber) {
                     oldFiber = oldFiber.sibling
                 }
 
+                // fiber的第一个子节点
                 if (index === 0) {
                     wipFiber.child = newFiber
                 } else if (element) {
+                    // fiber 的其他子节点，它第一个子节点的兄弟节点
                     prevSibling.sibling = newFiber
                 }
 
+                // 把新建的 newFiber 赋值给 prevSibling，在下一个循环为 newFiber 添加兄弟节点
                 prevSibling = newFiber
                 index++
             }
@@ -316,14 +334,14 @@
             createElement,
             render,
             useState
-        }
+        };
 
         /** @jsx myReact.createElement */
-        const container = document.getElementById("container")
+        const container = document.getElementById("container");
 
         function Counter() {
-            const [count1, setCount1] = myReact.useState(1)
-            const [count2, setCount2] = myReact.useState(2)
+            const [count1, setCount1] = myReact.useState(1);
+            const [count2, setCount2] = myReact.useState(2);
             return (
                 <div>
                     <h1>
@@ -336,10 +354,10 @@
                     <button onClick={() => setCount2(count2 => count2 + 2)}>add2</button>
                 </div>
             )
-        }
-        const element = <Counter />
+        };
+        const element = <Counter />;
 
-        myReact.render(element, container)
+        myReact.render(element, container);
     </script>
     <p>为 myReact 添加管理状态的功能，期望是函数组件拥有自己的状态，且可以获取、更新状态。</p>
     <p>通过以下步骤实现：</p>
