--- a/BuildAReact/0_element_render.html
+++ b/BuildAReact/0_element_render.html
@@ -16,14 +16,14 @@
     <script type="text/babel">
         // what React does
         // either in JSX or creatElement
-        // const element = <h1 title="foo">hello world</h1>
+        // const element = <h1 title="foo">hello world</h1>;
         // const element = React.createElement(
         //         "h1",
         //         { title: "foo" },
         //         "Hello world"
-        //     )
-        // console.log(element)
-        // const container = document.getElementById('container')
+        //     );
+        // console.log(element);
+        // const container = document.getElementById('container');
         // ReactDOM.render(element, container);
 
         // own version
@@ -34,17 +34,18 @@
                 title: 'foo',
                 children: 'hello world'
             }
-        }
-        const container = document.getElementById("container")
+        };
+        const container = document.getElementById("container");
         // create DOM node
-        const node = document.createElement(element.type)
-        node["title"] = element.props.title
+        const node = document.createElement(element.type);
+        node["title"] = element.props.title;
         // create nodes for the children
-        const text = document.createTextNode("")
-        text["nodeValue"] = element.props.children
+        const text = document.createTextNode("");
+        text["nodeValue"] = element.props.children;
         // append the textNode to the h1 and the h1 to the container
-        node.appendChild(text)
-        container.appendChild(node)
+        node.appendChild(text);
+        console.log(node);
+        container.appendChild(node);
     </script>
     <p>JSX is transformed to JS by build tools like Babel. The transformation is usually simple: replace the code inside the
     tags with a call to createElement, passing the tag name, the props and the children as parameters.</p>
