--- a/BuildAReact/4_fibers.html
+++ b/BuildAReact/4_fibers.html
@@ -23,117 +23,119 @@
                             : createTextElement(child)
                     )
                 }
-            }
+            };
         }
 
         function createTextElement(text) {
             return {
-                type: "TEXT_ELEMENT",
+                type: "PRIMITIVE_ELEMENT",
                 props: {
                     nodeValue: text,
                     children: []
                 }
-            }
+            };
         }
 
-        // render function
+        // 原来的render函数改为了createDom函数，在performUnitOfWork中调用
         function createDom(fiber) {
-            const dom = fiber.type === 'TEXT_ELEMENT'
+            const dom = fiber.type === 'PRIMITIVE_ELEMENT'
                 ? document.createTextNode("")
-                : document.createElement(fiber.type)
+                : document.createElement(fiber.type);
 
-            const isProperty = key => key !== "children"
+            const isProperty = key => key !== "children";
             Object.keys(fiber.props)
                 .filter(isProperty)
                 .forEach(name => {
                     dom[name] = fiber.props[name]
-                })
-            return dom
+                });
+            return dom;
         }
 
-        let nextUnitOfWork = null
+        let nextUnitOfWork = null;
+
+        // 将nextUnitOfWork设为fiber tree的根节点
         function render(element, container) {
             nextUnitOfWork = {
                 dom: container,
                 props: {
                     children: [element]
                 }
-            }
+            };
         }
 
         function workLoop(deadline) {
-            let shouldYield = false
+            let shouldYield = false;
             while (nextUnitOfWork && !shouldYield) {
-                nextUnitOfWork = performUnitOfWork(
-                    nextUnitOfWork
-                )
-                shouldYield = deadline.timeRemaining() < 1
+                nextUnitOfWork = performUnitOfWork(nextUnitOfWork);
+                shouldYield = deadline.timeRemaining() < 1;
             }
-            requestIdleCallback(workLoop)
+            requestIdleCallback(workLoop);
         }
 
-        requestIdleCallback(workLoop)
+        requestIdleCallback(workLoop);
 
         function performUnitOfWork(fiber) {
-            // console.log(fiber)
+            // 当fiber中没有节点时，创建一个新节点并添加到DOM节点中
             if (!fiber.dom) {
-                fiber.dom = createDom(fiber)
+                fiber.dom = createDom(fiber);
             }
 
             if (fiber.parent) {
-                fiber.parent.dom.appendChild(fiber.dom)
+                fiber.parent.dom.appendChild(fiber.dom);
             }
-
-            const elements = fiber.props.children
-            let index = 0
-            let prevSibling = null
+            
+            // 对于每个子节点，创建一个新的fiber
+            const elements = fiber.props.children;
+            let index = 0;
+            let prevSibling = null;
 
             while (index < elements.length) {
-                const element = elements[index]
+                const element = elements[index];
 
                 const newFiber = {
                     type: element.type,
                     props: element.props,
                     parent: fiber,
                     dom: null,
-                }
-
+                };
+                // 然后把新fiber添加到fiber树中，作为第一个子节点或者左右兄弟节点
                 if (index === 0) {
-                    fiber.child = newFiber
+                    fiber.child = newFiber;
                 } else {
-                    prevSibling.sibling = newFiber
+                    prevSibling.sibling = newFiber;
                 }
 
-                prevSibling = newFiber
-                index++
+                prevSibling = newFiber;
+                index++;
             }
-
+            // 最后返回下一个工作单元
+            // 先判断是否是子节点。然后是兄弟节点，最后是父节点
             if (fiber.child) {
-                return fiber.child
+                return fiber.child;
             }
-            let nextFiber = fiber
+            let nextFiber = fiber;
             while (nextFiber) {
                 if (nextFiber.sibling) {
-                    return nextFiber.sibling
+                    return nextFiber.sibling;
                 }
-                nextFiber = nextFiber.parent
+                nextFiber = nextFiber.parent;
             }
         }
 
         const myReact = {
             createElement,
             render
-        }
+        };
 
         const element = myReact.createElement(
             "div",
             { id: "foo" },
             myReact.createElement("h1", null, "bar"),
             myReact.createElement("h2", null, "baz"),
-        )
-        console.log(element)
-        const container = document.getElementById("container")
-        myReact.render(element, container)
+        );
+        console.log(element);
+        const container = document.getElementById("container");
+        myReact.render(element, container);
     </script>
     <img style="width:350px;height:400px" src="../statics/fiber.png" alt="Fiber" />
     <p>上图的箭头也表明了 fiber 的渲染过程，渲染过程详细描述如下：</p>
