--- a/BuildAReact/5_render_commit_phases.html
+++ b/BuildAReact/5_render_commit_phases.html
@@ -26,22 +26,25 @@
                             : createTextElement(child)
                     )
                 }
-            }
+            };
         }
+
         function createTextElement(text) {
             return {
-                type: "TEXT_ELEMENT",
+                type: "PRIMITIVE_ELEMENT",
                 props: {
                     nodeValue: text,
                     children: []
                 }
-            }
+            };
         }
 
+        // 原来的render函数改为了createDom函数，在performUnitOfWork中调用
         function createDom(fiber) {
-            const dom = fiber.type === 'TEXT_ELEMENT'
+            const dom = fiber.type === 'PRIMITIVE_ELEMENT'
                 ? document.createTextNode("")
                 : document.createElement(fiber.type)
+
             const isProperty = key => key !== "children"
             Object.keys(fiber.props)
                 .filter(isProperty)
@@ -55,115 +58,106 @@
         // work in progress root
         let wipRoot = null
 
+        // 将render函数中的nextUnitOfWork换成wipRoot(work in progress tree)
         function render(element, container) {
             wipRoot = {
                 dom: container,
                 props: {
                     children: [element]
                 }
-            }
-            console.log("work in progress:", wipRoot)
-            nextUnitOfWork = wipRoot
+            };
+            nextUnitOfWork = wipRoot;
         }
 
+        // 将节点添加到DOM树中
         function commitRoot() {
-            commitWork(wipRoot.child)
-            wipRoot = null
+            commitWork(wipRoot.child);
+            wipRoot = null;
         }
 
-        // recursively append all the nodes to the dom
+        // 递归地将节点添加到DOM树中
         function commitWork(fiber) {
             if (!fiber) {
-                return
+                return;
             }
-            const domParent = fiber.parent.dom
-            domParent.appendChild(fiber.dom)
-            commitWork(fiber.child)
-            commitWork(fiber.sibling)
+            const domParent = fiber.parent.dom;
+            domParent.appendChild(fiber.dom);
+            // 递归添加子节点和兄弟节点
+            commitWork(fiber.child);
+            commitWork(fiber.sibling);
         }
 
         function workLoop(deadline) {
-            let shouldYield = false
+            let shouldYield = false;
             while (nextUnitOfWork && !shouldYield) {
-                nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
-                shouldYield = deadline.timeRemaining() < 1
-            }
-            
-            // once we finish all the work (we know it because there isn’t a next unit of work) we commit the whole fiber tree to the DOM.
-            if (!nextUnitOfWork && wipRoot) {
-                commitRoot()
+                nextUnitOfWork = performUnitOfWork(nextUnitOfWork);
+                shouldYield = deadline.timeRemaining() < 1;
             }
 
-            requestIdleCallback(workLoop)
+            // 当render阶段的所有工作完成后(因为没有下一个单元的工作了)，我们就把整个fiber树commit到DOM中
+            if (!nextUnitOfWork && wipRoot) {
+                commitRoot();
+            }
+
+            requestIdleCallback(workLoop);
         }
 
-        requestIdleCallback(workLoop)
+        requestIdleCallback(workLoop);
 
         function performUnitOfWork(fiber) {
             if (!fiber.dom) {
-                fiber.dom = createDom(fiber)
+                fiber.dom = createDom(fiber);
             }
 
-            const elements = fiber.props.children
-            let index = 0
-            let prevSibling = null
+            const elements = fiber.props.children;
+            let index = 0;
+            let prevSibling = null;
 
             while (index < elements.length) {
-                const element = elements[index]
+                const element = elements[index];
 
                 const newFiber = {
                     type: element.type,
                     props: element.props,
                     parent: fiber,
                     dom: null,
-                }
+                };
 
                 if (index === 0) {
-                    fiber.child = newFiber
+                    fiber.child = newFiber;
                 } else {
-                    prevSibling.sibling = newFiber
+                    prevSibling.sibling = newFiber;
                 }
 
-                prevSibling = newFiber
-                index++
+                prevSibling = newFiber;
+                index++;
             }
 
             if (fiber.child) {
-                return fiber.child
+                return fiber.child;
             }
-            let nextFiber = fiber
+            let nextFiber = fiber;
             while (nextFiber) {
                 if (nextFiber.sibling) {
-                    return nextFiber.sibling
+                    return nextFiber.sibling;
                 }
-                nextFiber = nextFiber.parent
+                nextFiber = nextFiber.parent;
             }
         }
 
         const myReact = {
             createElement,
             render
-        }
-
-        /** @jsx myReact.createElement */
-        // const element = (
-        //     <div>
-        //         <h1>
-        //             <p />
-        //             <a />
-        //         </h1>
-        //         <h2 />
-        //     </div>
-        // )
+        };
 
         const element = myReact.createElement(
             "div",
             { id: "foo" },
             myReact.createElement("h1", null, "bar"),
             myReact.createElement("h2", null, "baz"),
-        )
+        );
 
-        myReact.render(element, document.getElementById('container'))
+        myReact.render(element, document.getElementById('container'));
     </script>
     <p>We are adding a new node to the DOM each time we work on an element. And, remember, the browser could interrupt our work
     before we finish rendering the whole tree. In that case, the user will see an incomplete UI. And we don’t want that.</p>
