--- a/BuildAReact/6_reconciliation.html
+++ b/BuildAReact/6_reconciliation.html
@@ -19,40 +19,42 @@
                 props: {
                     ...props,
                     children: children.map(child =>
-                        typeof child === 'object'
-                            ? child
-                            : createTextElement(child)
+                        typeof child === "object" ? child : createTextElement(child)
                     )
                 }
-            }
+            };
         }
+
         function createTextElement(text) {
             return {
-                type: "TEXT_ELEMENT",
+                type: "PRIMITIVE_ELEMENT",
                 props: {
                     nodeValue: text,
                     children: []
                 }
-            }
+            };
         }
 
         function createDom(fiber) {
-            const dom = fiber.type === 'TEXT_ELEMENT'
+            const dom =
+                fiber.type == "PRIMITIVE_ELEMENT"
                 ? document.createTextNode("")
-                : document.createElement(fiber.type)
-            updateDom(dom, {}, fiber.props)
-            return dom
+                : document.createElement(fiber.type);
+
+            updateDom(dom, {}, fiber.props);
+
+            return dom;
         }
 
         const isEvent = key => key.startsWith("on")
         const isProperty = key => key !== "children" && !isEvent(key)
-        // // 是否是新属性
+        // 是否是新属性
         const isNew = (prev, next) => key => prev[key] !== next[key]
         // 是否是旧属性
         const isGone = (prev, next) => key => !(key in next)
 
         function updateDom(dom, prevProps, nextProps) {
-            //Remove old or changed event listeners
+            // 移除旧的或者已经改变的事件监听器
             Object.keys(prevProps)
                 .filter(isEvent)
                 .filter(
@@ -68,25 +70,25 @@
                         eventType,
                         prevProps[name]
                     )
-                })
+                });
 
-            // Remove old properties
+            // 移除旧属性
             Object.keys(prevProps)
                 .filter(isProperty)
                 .filter(isGone(prevProps, nextProps))
                 .forEach(name => {
                     dom[name] = ""
-                })
+                });
 
-            // Set new or changed properties
+            // 设置新的或改变后的属性
             Object.keys(nextProps)
                 .filter(isProperty)
                 .filter(isNew(prevProps, nextProps))
                 .forEach(name => {
                     dom[name] = nextProps[name]
-                })
+                });
 
-            // Add event listeners
+            // 添加事件监听器
             Object.keys(nextProps)
                 .filter(isEvent)
                 .filter(isNew(prevProps, nextProps))
@@ -98,7 +100,7 @@
                         eventType,
                         nextProps[name]
                     )
-                })
+                });
         }
 
         function render(element, container) {
@@ -107,107 +109,112 @@
                 props: {
                     children: [element]
                 },
-                // add the alternate property to every fiber
-                // a link to the old fiber, the fiber that we committed to the DOM in the previous commit phase
+                // 链接到旧fiber的属性，指在前一个commit阶段提交更新到DOM的fiber
                 alternate: currentRoot
-            }
-            // render 时，初始化 deletions 数组
-            deletions = []
-            nextUnitOfWork = wipRoot
+            };
+            // render时，初始化 deletions 数组
+            deletions = [];
+            nextUnitOfWork = wipRoot;
         }
 
-        let nextUnitOfWork = null
+        let nextUnitOfWork = null;
         // work in progress root
-        let wipRoot = null
-        // save a reference to that “last fiber tree we committed to the DOM” after we finish the commit
-        let currentRoot = null
-        // 新建 deletions 数组存储需删除的 fiber 节点，渲染 DOM 时，遍历 deletions 删除旧 fiber
-        let deletions = null
+        let wipRoot = null;
+        // 用current tree保存“上一次commit到DOM的fiber tree”的引用
+        let currentRoot = null;
+        // 新建deletions数组，存储需删除的fiber节点，渲染DOM时，遍历deletions删除旧fiber
+        let deletions = null;
+
 
         function commitRoot() {
-            // 渲染 DOM 时，遍历 deletions 删除旧 fiber
-            deletions.forEach(commitWork)
-            commitWork(wipRoot.child)
-            // save a reference to that “last fiber tree we committed to the DOM” after we finish the commit
-            currentRoot = wipRoot
-            wipRoot = null
+            // 渲染DOM时，遍历deletions删除旧fiber
+            deletions.forEach(commitWork);
+            commitWork(wipRoot.child);
+            // 交换两棵树的指针
+            currentRoot = wipRoot;
+            wipRoot = null;
         }
 
         function commitWork(fiber) {
-            if (!fiber) return
-            const domParent = fiber.parent.dom
-            // 当 fiber 的 effectTag 为 PLACEMENT 时，表示是新增 fiber，将该节点新增至父节点中
-            if (
-                fiber.effectTag === "PLACEMENT" &&
-                fiber.dom != null
-            ) {
-                domParent.appendChild(fiber.dom)
+            if (!fiber) return;
+            const domParent = fiber.parent.dom;
+            if (fiber.effectTag === "PLACEMENT" && fiber.dom != null) {
+                // 当fiber的effectTag为PLACEMENT时，表示新增fiber，将该节点新增至父节点中
+                domParent.appendChild(fiber.dom);
             } else if (fiber.effectTag === "DELETION") {
-                // 当 fiber 的 effectTag 为 DELETION 时，表示是删除 fiber，将父节点的该节点删除
-                domParent.removeChild(fiber.dom)
+                // 当fiber的effectTag为DELETION时，表示删除fiber，将父节点的该节点删除
+                domParent.removeChild(fiber.dom);
             } else if (fiber.effectTag === 'UPDATE' && fiber.dom !== null) {
-                // 当 fiber 的 effectTag 为 UPDATE 时，表示是更新 fiber，更新 props 属性
-                updateDom(fiber.dom, fiber.alternate.props, fiber.props)
+                // 当fiber的effectTag为UPDATE时，表示更新fiber，更新props属性
+                updateDom(fiber.dom, fiber.alternate.props, fiber.props);
             }
+            // 递归实现
+            commitWork(fiber.child);
+            commitWork(fiber.sibling);
+        }
 
-            commitWork(fiber.child)
-            commitWork(fiber.sibling)
+        function commitDeletion(fiber, domParent) {
+            if (fiber.dom) {
+                domParent.removeChild(fiber.dom);
+            } else {
+                commitDeletion(fiber.child, domParent);
+            }
         }
 
         function workLoop(deadline) {
-            let shouldYield = false
+            let shouldYield = false;
             while (nextUnitOfWork && !shouldYield) {
-                nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
-                shouldYield = deadline.timeRemaining() < 1
+                nextUnitOfWork = performUnitOfWork(nextUnitOfWork);
+                shouldYield = deadline.timeRemaining() < 1;
             }
 
             if (!nextUnitOfWork && wipRoot) {
-                commitRoot()
+                commitRoot();
             }
 
-            requestIdleCallback(workLoop)
+            requestIdleCallback(workLoop);
         }
 
-        requestIdleCallback(workLoop)
+        requestIdleCallback(workLoop);
 
         function performUnitOfWork(fiber) {
             if (!fiber.dom) {
-                fiber.dom = createDom(fiber)
+                fiber.dom = createDom(fiber);
             }
 
-            const elements = fiber.props.children
-            reconcileChildren(fiber, elements)
+            const elements = fiber.props.children;
+            reconcileChildren(fiber, elements);
 
             if (fiber.child) {
-                return fiber.child
+                return fiber.child;
             }
-            let nextFiber = fiber
+            let nextFiber = fiber;
             while (nextFiber) {
                 if (nextFiber.sibling) {
-                    return nextFiber.sibling
+                    return nextFiber.sibling;
                 }
-                nextFiber = nextFiber.parent
+                nextFiber = nextFiber.parent;
             }
         }
 
         function reconcileChildren(wipFiber, elements) {
-            let index = 0
-            // oldFiber 可以在 wipFiber.alternate 中找到
-            let oldFiber = wipFiber.alternate && wipFiber.alternate.child
+            let index = 0;
+            // oldFiber可以在wipFiber.alternate中找到
+            let oldFiber = wipFiber.alternate && wipFiber.alternate.child;
             // 上一个兄弟节点
-            let prevSibling = null
+            let prevSibling = null;
 
             while (index < elements.length || oldFiber != null) {
-                const element = elements[index]
-                let newFiber = null
+                const element = elements[index];
+                let newFiber = null;
 
-                // fiber 类型是否相同
+                // fiber类型是否相同
                 const sameType =
                     oldFiber &&
                     element &&
-                    element.type == oldFiber.type
+                    element.type == oldFiber.type;
 
-                // 如果类型相同，仅更新 props
+                // 如果类型相同，仅更新props
                 if (sameType) {
                     newFiber = {
                         type: oldFiber.type,
@@ -216,10 +223,10 @@
                         parent: wipFiber,
                         alternate: oldFiber,
                         effectTag: "UPDATE",
-                    }
+                    };
                 }
 
-                // 新旧 fiber 类型不同，且有新元素时
+                // 新旧fiber类型不同，且有新元素时
                 if (element && !sameType) {
                     // 创建一个新的 dom 节点，设置 effectTag 为 PLACEMENT
                     newFiber = {
@@ -229,44 +236,45 @@
                         parent: wipFiber,
                         alternate: null,
                         effectTag: "PLACEMENT",
-                    }
+                    };
                 }
 
-                // 新旧 fiber 类型不同，且有旧 fiber 时
+                // 新旧fiber类型不同，且有旧fiber时
                 if (oldFiber && !sameType) {
-                    // 删除旧 fiber，设置 effectTag 为 DELETION
-                    oldFiber.effectTag = "DELETION"
-                    deletions.push(oldFiber) // 加入待删除节点列表
+                    // 删除旧fiber，设置effectTag为DELETION
+                    oldFiber.effectTag = "DELETION";
+                    // 加入待删除节点列表
+                    deletions.push(oldFiber); 
                 }
 
                 if (oldFiber) {
-                    oldFiber = oldFiber.sibling
+                    oldFiber = oldFiber.sibling;
                 }
 
                 // fiber的第一个子节点
                 if (index === 0) {
-                    wipFiber.child = newFiber
+                    wipFiber.child = newFiber;
                 } else if (element) {
-                    // fiber 的其他子节点，它第一个子节点的兄弟节点
-                    prevSibling.sibling = newFiber
+                    // fiber的其他子节点，它第一个子节点的兄弟节点
+                    prevSibling.sibling = newFiber;
                 }
 
-                // 把新建的 newFiber 赋值给 prevSibling，在下一个循环为 newFiber 添加兄弟节点
-                prevSibling = newFiber
-                index++
+                // 把新建的newFiber赋值给prevSibling，在下一个循环为newFiber添加兄弟节点
+                prevSibling = newFiber;
+                index++;
             }
         }
 
         const myReact = {
             createElement,
             render
-        }
+        };
 
         /** @jsx myReact.createElement */
-        const container = document.getElementById("container")
+        const container = document.getElementById("container");
 
         const updateValue = e => {
-            rerender(e.target.value)
+            rerender(e.target.value);
         }
 
         const rerender = value => {
@@ -275,11 +283,11 @@
                     <input onInput={updateValue} value={value} />
                     <h2>Hello {value}</h2>
                 </div>
-            )
-            myReact.render(element, container)
+            );
+            myReact.render(element, container);
         }
 
-        rerender("World")
+        rerender("World");
     </script>
     <p>reconciliation协调/diff算法：</p>
     <p>当 element 有更新时，需要将更新前的 fiber tree 和更新后的 fiber tree 进行比较，得到比较结果后，仅对有变化的 fiber 对应的 dom 节点进行更新。
